# obs-prism

./: Cargo.toml  build.rs  deploy.sh
src/: main.rs  obslib.rs
src/obs/: mod.rs
web/: index.html
